saves/test/demo_full_20240802_193545/dff8p/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp dff8p_tb.v dff8p.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
dff8p_tb.v:103: $finish called at 230000 (1ps)

iverilog cmd 2 error:

